# ToDo-FastAPI

./: .gitignore  README.md  docker-compose.dev.yml  main.py  pyproject.toml  routers.py
app/: app_endpoints.py  models.py  schemas.py
asyncdb/: endpoints.py
core/: base.py  db.py  routers.py  utils.py
migrations/: env.py
migrations/versions/: 04204981db9e_added_renamed_library_models.py  4e4abb3edbda_added_tag_model.py  577336ea467c_added_library_models.py  5c1f98c760d0_added_relation.py  721c23f93b06_added_user_todo_models.py  76dc21ef5c50_added_in_todo_table_prop2.py  e10b30cb52e5_added_in_todo_table_prop.py
tags/: models.py  schemas.py  services.py  tags_endpoints.py
todo_app/: models.py  schemas.py  services.py  todo_endpoints.py
user/: auth.py  models.py  schemas.py  user_endpoints.py
